Fix main title word spacing

--- a/docs/assets/styles/_structure.scss
+++ b/docs/assets/styles/_structure.scss
@@ -69,6 +69,7 @@
     line-height: 1.25rem;
     text-transform: uppercase;
     font-weight: $base-font-bold;
+    word-spacing: normal;
   }
 }
 
